<resources>
    <string name="app_name">Kindom</string>
    <string name="ok">OK</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="sign_in_label">Sign In</string>
    <string name="register_prompt">Not registered yet? <b><font color='#FFFF3B30'>Click Here!</font></b></string>
    <string name="error_internet_connection">Please ensure you have a stable Internet connection before using this app</string>
    <string name="error_email">Invalid email</string>
    <string name="error_empty_password">Password cannot be empty</string>
    <string name="error_sign_in">Invalid email / password</string>
    <string name="register_profile_welcome">Be a part of Kindom!</string>
    <string name="user_image_text">Choose a profile image:</string>
    <string name="name_label">Name</string>
    <string name="postal_code_label">Postal Code</string>
    <string name="rc_label">Select RC</string>
    <string name="user_group_text">Register as:</string>
    <string name="user_group_admin_button">Admin</string>
    <string name="user_group_user_button">User</string>
    <string name="next_label">Next</string>
    <string name="error_profile_image">Please choose a profile image by clicking on the circular image</string>
    <string name="error_name">Name cannot be empty</string>
    <string name="error_postal_code">Postal code is invalid</string>
    <string name="error_postal_code_empty">Postal code cannot be empty</string>
    <string name="error_postal_code_length">Postal code must be 6 digits long</string>
    <string name="error_rc">Select the correct RC from the provided list</string>
    <string name="error_user_group">Please select if you are registering as an admin or a user</string>
    <string name="confirm_password_label">Confirm Password</string>
    <string name="password_policy">Password must: \n• have at least 8 characters \n• include at least 1 uppercase letter (A–Z) \n• include at least 1 lowercase letter (a–z) \n• include at least 1 number (0–9)</string>
    <string name="sign_up_label">Sign Up</string>
    <string name="error_password_requirements">Password does not meet requirements</string>
    <string name="error_password_empty">Please enter a password in the above field first</string>
    <string name="error_password_match">Password does not match above</string>
    <string name="error_confirm_password">Please confirm your password</string>
    <string name="error_profile_image_upload">Upload of profile image failed. Try uploading the profile image again under the profile settings.</string>
    <string name="menu_sign_out_label">Sign Out</string>
    <string name="menu_my_profile_label">My Profile</string>
    <string name="profile_settings_label">Profile settings</string>
    <string name="my_profile_email_header">Email:</string>
    <string name="my_profile_postal_code_header">Postal code:</string>
    <string name="my_profile_rc_header">RC:</string>
    <string name="error_profile_image_load">Profile image cannot be loaded. Please try again later.</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_help_me">Help Me!</string>
    <string name="navigation_chat">Chat</string>
    <string name="home_weather">Weather</string>
    <string name="home_weather_fair">Fair</string>
    <string name="home_weather_partly_cloudy">Partly\nCloudy</string>
    <string name="home_weather_cloudy">Cloudy</string>
    <string name="home_weather_hazy">Hazy</string>
    <string name="home_weather_windy">Windy</string>
    <string name="home_weather_mist">Mist</string>
    <string name="home_weather_thundery_showers">Thundery\nShowers</string>
    <string name="home_psi_value_header">PSI Value</string>
    <string name="home_image_content_desc">News</string>
    <string name="home_neighbourhood_news">Neighbourhood News</string>
    <string name="home_singapore_news">Singapore News</string>
    <string name="home_no_news">There are no news to show.</string>
    <string name="home_admin_add_news">Add news</string>
    <string name="home_admin_news_type_neighbourhood">Neighbourhood</string>
    <string name="home_admin_news_type_singapore">Singapore</string>
    <string name="home_admin_news_deleted">News deleted</string>
    <string name="home_admin_news_deleted_error">News NOT deleted. Please try again.</string>
    <string name="home_admin_add_news_image_header">Add an image:</string>
    <string name="home_admin_select_news_type_header">Select the type of news:</string>
    <string name="error_news_image_empty">Please add an image</string>
    <string name="error_news_type">Please select the type of news</string>
    <string name="error_news_image_upload">Upload of image failed. Please try again.</string>
    <string name="help_me_all_listing_tab">All Listing</string>
    <string name="help_me_refresh_toast">Swipe down to refresh</string>
    <string name="help_me_listing_empty">There is currently no listing available.</string>
    <string name="help_me_my_listing_tab">My Listing</string>
    <string name="help_me_user_listing_empty">You have not posted any listing. Add one today!</string>
    <string name="list_item_help_me_listing_details">Details</string>
    <string name="fab_add_content_desc">Add</string>
    <string name="help_me_post_details_label">Post details</string>
    <string name="menu_report_listing_label">Report Listing</string>
    <string name="help_me_post_user_header">User requiring help:</string>
    <string name="help_me_post_location_header">Location of help required:</string>
    <string name="help_me_post_date_time_header">Date and Time of help required:</string>
    <string name="help_me_post_description_header">Description:</string>
    <string name="help_me_post_chat">Chat</string>
    <string name="help_me_add_post_label">Add post</string>
    <string name="help_me_post_add_category">Category</string>
    <string name="help_me_post_add_title">Title</string>
    <string name="help_me_post_add_date_button">Set Date</string>
    <string name="help_me_post_add_date">Date of help required</string>
    <string name="help_me_post_add_time_button">Set Time</string>
    <string name="help_me_post_add_time">Time of help required</string>
    <string name="help_me_post_add_description">Description</string>
    <string name="help_me_post_add_button">Add</string>
    <string name="error_category">Please select a category</string>
    <string name="error_title">Title cannot be empty</string>
    <string name="error_date">Please select a date</string>
    <string name="error_time">Time cannot be in the past</string>
    <string name="error_empty_time">Please select a time</string>
    <string name="error_description">Description cannot be empty</string>
    <string name="list_item_help_me_user_listing_expired">EXPIRED</string>
    <string name="list_item_help_me_user_listing_edit">Edit</string>
    <string name="list_item_help_me_listing_delete">Delete</string>
    <string name="help_me_edit_post_label">Edit post</string>
    <string name="help_me_post_save_button">Save Changes</string>
    <string name="help_me_post_delete">Are you sure you want to delete this post?</string>
    <string name="help_me_reported_listing_tab">Reported Listing</string>
    <string name="help_me_post_reported">Post is successfully reported</string>
    <string name="list_item_help_me_listing_ignore">Ignore</string>
    <string name="help_me_post_ignore">Are you sure you want to ignore this reported post?</string>
    <string name="help_me_view_offer_label">View Offer</string>
    <string name="help_me_post_offer_help">Offer help</string>
    <string name="help_me_post_offer_received">Thanks for offering to help</string>
    <string name="help_me_post_offer_received_already">You have already applied to offer help</string>
    <string name="list_item_help_me_offer_accept_help">Accept</string>
    <string name="list_item_help_me_offer_decline_help">Decline</string>
    <string name="help_me_offer_decline">Are you sure you want to decline this user\'s help?</string>
    <string name="help_me_offer_accept">Are you sure you want to accept this user\'s help?</string>
    <string name="blk">Blk </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="chat_empty">You do not have any chat.</string>
    <string name="chat_user_name">Name</string>
    <string name="chat_message_hint">Message</string>
</resources>