<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:enabled="true"
        android:icon="@drawable/ic_round_home_24"
        android:title="@string/navigation_home" />

    <item
        android:id="@+id/navigation_help_me"
        android:enabled="true"
        android:icon="@drawable/ic_round_emoji_people_24"
        android:title="@string/navigation_help_me" />

    <item
        android:id="@+id/navigation_chat"
        android:enabled="true"
        android:icon="@drawable/ic_round_chat_24"
        android:title="@string/navigation_chat" />

    <item
        android:id="@+id/navigation_events"
        android:enabled="true"
        android:icon="@drawable/ic_round_event_24"
        android:title="@string/navigation_events" />
</menu>